[package]
name = "game_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game-world"
path = "src/bin/main.rs"

[dependencies]
openraft = { version = "0.8", features = ["serde"] }
thiserror = "1"
actix-web = "4.0.0-rc.2"
async-trait = "0.1.36"
clap = { version = "3.0.13", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }